--- a/404.html
+++ b/404.html
@@ -46,8 +46,8 @@
             <div class="row gx-0 align-items-center">
                 <div class="col-lg-5 text-center text-lg-start mb-lg-0">
                     <div class="d-flex">
-                        <a href="#" class="text-muted me-4"><i class="fas fa-envelope text-secondary me-2"></i>Example@gmail.com</a>
-                        <a href="#" class="text-muted me-0"><i class="fas fa-phone-alt text-secondary me-2"></i>+01234567890</a>
+                        <a href="#" class="text-muted me-4"><i class="fas fa-envelope text-secondary me-2"></i>Visaprointernational@tuta.io</a>
+                        <a href="#" class="text-muted me-0"><i class="fas fa-phone-alt text-secondary me-2"></i>+447418318612</a>
                     </div>
                 </div>
                 <div class="col-lg-3 row-cols-1 text-center mb-2 mb-lg-0">
@@ -125,11 +125,11 @@
         <!-- Header Start -->
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
-                <h3 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">404 Pages</h1>
+                <h3 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Visa Application forms</h1>
                 <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown" data-wow-delay="0.3s">
 		<li class="breadcrumb-item">
-<li class="breadcrumb-item"><a href="form/payment/payment.html" class="text-white">Registration Form</a></li>
-		<li class="breadcrumb-item"><a href="#" class="text-white">Pages</a></li>
+<li class="breadcrumb-item"><a href="form/payment/payment.html" class="text-white">Application Visa Form</a></li>
+		<li class="breadcrumb-item"><a href="#" class="text-white">Application Request form</a></li>
 		<a href="form/form.html" class="nav-item nav-link">form</a>
                 </ol>    
             </div>
