--- a/404.html
+++ b/404.html
@@ -128,9 +128,13 @@
                 <h3 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Visa Application forms</h1>
                 <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown" data-wow-delay="0.3s">
 		<li class="breadcrumb-item">
+			
+<li class="breadcrumb-item"><a href="form/payment/payment.html" class="text-white">Review Our forms Policies </a></li>
 <li class="breadcrumb-item"><a href="form/payment/payment.html" class="text-white">Application Visa Form</a></li>
-		<li class="breadcrumb-item"><a href="#" class="text-white">Application Request form</a></li>
-		<a href="form/form.html" class="nav-item nav-link">form</a>
+		<li class="breadcrumb-item"><a href="form/payment/payment.html" class="text-white">Application Request form</a></li>
+		<li class="breadcrumb-item"><a href="form/payment/payment.html" class="text-white">Job offer Application Form</a></li>
+		<li class="breadcrumb-item"><a href="form/payment/payment.html" class="text-white">Educational Invitation Letter Request Form </a></li>
+
                 </ol>    
             </div>
         </div>
