--- a/404.html
+++ b/404.html
@@ -128,11 +128,23 @@
                 <h3 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Visa Application forms</h1>
                 <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown" data-wow-delay="0.3s">
 		<li class="breadcrumb-item">
-			
-<li class="breadcrumb-item"><a href="form/payment/payment.html" class="text-white">Review Our forms Policies </a></li>
-<li class="breadcrumb-item"><a href="form/payment/payment.html" class="text-white">Application Visa Form</a></li>
-		<li class="breadcrumb-item"><a href="form/payment/payment.html" class="text-white">Application Request form</a></li>
-		<li class="breadcrumb-item"><a href="form/payment/payment.html" class="text-white">Job offer Application Form</a></li>
+
+						<li class="breadcrumb-item">
+  <a href="form/payment/payment.html" style="background-color: #dc3545; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block;">
+    Review Our forms Policies
+  </a>
+</li>
+			<li class="breadcrumb-item">
+  <a href="form/payment/payment.html" style="background-color: #dc3545; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block;">
+    Job Offer Application Form
+  </a>
+</li>
+
+			<li class="breadcrumb-item">
+  <a href="form/payment/payment.html" style="background-color: #dc3545; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block;">
+    Application Request form
+  </a>
+</li>
 <li class="breadcrumb-item">
   <a href="form/payment/payment.html" style="background-color: #dc3545; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block;">
     Job Offer Application Form
